# pdmt5

./: .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/local-qa/: SKILL.md
.agents/skills/local-qa/scripts/: qa.sh
.agents/skills/metatrader5-docs/: SKILL.md
.agents/skills/metatrader5-search/: SKILL.md
.agents/skills/pr-feedback-triage/: SKILL.md
.claude/: settings.json
.claude/agents/: copilot.md
.claude/skills/local-qa/: SKILL.md
.claude/skills/local-qa/scripts/: qa.sh
.codex/skills/: gh-pr-create  gh-pr-merge  gh-pr-ready  gh-pr-review  gh-pr-view
.codex/skills/claude-search/: SKILL.md
.github/workflows/: ci.yml  claude.yml  docs-deploy.yml  docs.yml  opencode.yml  release.yml
.serena/: project.yml
api/: index.html
api/constants/: index.html
api/dataframe/: index.html
api/deployment/: index.html
api/mt5/: index.html
api/rest-api/: index.html
api/trading/: index.html
api/utils/: index.html
architecture/: index.html
docs/: architecture.md  index.md
docs/api/: cli.md  constants.md  dataframe.md  deployment.md  etl.md  exception.md  index.md  manipulator.md  mt5.md  report.md  rest-api.md  trading.md  utils.md
pdmt5/: __init__.py  __main__.py  cli.py  client.py  constants.py  core.py  dataframe.py  etl.py  manipulator.py  mt5.py  printer.py  report.py  trading.py  utils.py
pdmt5/api/: __init__.py  __main__.py  auth.py  dependencies.py  formatters.py  main.py  middleware.py  models.py
pdmt5/api/routers/: __init__.py  account.py  health.py  history.py  market.py  symbols.py
search/: search_index.json
specs/041-mt5-rest-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/041-mt5-rest-api/contracts/: openapi.yaml
specs/042-mt5-core-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/042-mt5-core-client/checklists/: requirements.md
specs/043-mt5-dataframe-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/043-mt5-dataframe-client/checklists/: requirements.md
specs/044-mt5-trading-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/044-mt5-trading-client/checklists/: requirements.md
specs/045-mt5-utils/: spec.md
specs/046-mt5-api-service/: spec.md
specs/046-mt5-client-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/046-mt5-client-operations/checklists/: requirements.md
specs/047-api-auth-rate-limit/: spec.md
specs/047-mt5-client-operations/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/047-mt5-client-operations/checklists/: requirements.md
specs/047-mt5-client-operations/contracts/: openapi.yaml
specs/048-api-response-format/: spec.md
specs/049-api-routing-models/: spec.md
specs/050-api-runtime-deploy/: spec.md
specs/051-api-error-logging/: spec.md
specs/052-api-dependencies/: spec.md
test/: test_client.py  test_constants.py  test_core.py  test_dataframe.py  test_etl.py  test_init.py  test_manipulator.py  test_mt5.py  test_printer.py  test_report.py  test_trading.py  test_utils.py
tests/: conftest.py  helpers.py  test_architecture.py  test_cli.py  test_constants.py  test_dataframe.py  test_init.py  test_mt5.py  test_trading.py  test_utils.py
tests/test_api/: __init__.py  conftest.py  test_account.py  test_auth.py  test_cli.py  test_config.py  test_dependencies.py  test_formatters.py  test_health.py  test_history.py  test_integration.py  test_lifespan.py  test_market.py  test_middleware.py  test_models.py  test_symbols.py
