[project]
name = "pdmt5"
version = "0.0.1"
description = "Pandas-based data handler for MetaTrader 5"
authors = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "dceoy", email = "dceoy@users.noreply.github.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "MetaTrader5 >= 5.0.4424; sys_platform == 'win32'",
  "pandas >= 2.2.2",
  "pydantic >= 2.9.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Repository = "https://github.com/dceoy/pdmt5.git"

[tool.uv]
dev-dependencies = [
  "ruff >= 0.11.0",
  "pyright >= 1.1.402",
  "pytest >= 8.0.0",
  "pytest-mock >= 3.12.0",
  "pytest-cov >= 5.0.0",
  "pandas-stubs >= 2.2.3.250527",
]
required-environments = ["platform_system == 'Windows'"]

[tool.uv.build-backend]
source-include = ["pdmt5/**", "LICENSE"]
source-exclude = ["test/**"]

[tool.ruff]
line-length = 88
exclude = ["build", ".venv"]
preview = true

[tool.ruff.lint]
select = [
  "F",      # Pyflakes (F)
  "E",      # pycodestyle error (E)
  "W",      # pycodestyle warning (W)
  "C90",    # mccabe (C90)
  "I",      # isort (I)
  "N",      # pep8-naming (N)
  "D",      # pydocstyle (D)
  "UP",     # pyupgrade (UP)
  "S",      # flake8-bandit (S)
  "B",      # flake8-bugbear (B)
  "C4",     # flake8-comprehensions (C4)
  "SIM",    # flake8-simplify (SIM)
  "ARG",    # flake8-unused-arguments (ARG)
  "PD",     # pandas-vet (PD)
  "PLC",    # Pylint convention (PLC)
  "PLE",    # Pylint error (PLE)
  "PLR",    # Pylint refactor (PLR)
  "PLW",    # Pylint warning (PLW)
  "FLY",    # flynt (FLY)
  "NPY",    # NumPy-specific rules (NPY)
  "PERF",   # Perflint (PERF)
  "FURB",   # refurb (FURB)
  "RUF",    # Ruff-specific rules (RUF)
  "YTT",    # flake8-2020 (YTT)
  "ANN",    # flake8-annotations (ANN)
  "ASYNC",  # flake8-async (ASYNC)
  "BLE",    # flake8-blind-except (BLE)
  "FBT",    # flake8-boolean-trap (FBT)
  "A",      # flake8-builtins (A)
  "COM",    # flake8-commas (COM)
  # "CPY",    # flake8-copyright (CPY)
  "DTZ",    # flake8-datetimez (DTZ)
  "T10",    # flake8-debugger (T10)
  "DJ",     # flake8-django (DJ)
  "EM",     # flake8-errmsg (EM)
  "EXE",    # flake8-executable (EXE)
  "FA",     # flake8-future-annotations (FA)
  "ISC",    # flake8-implicit-str-concat (ISC)
  "ICN",    # flake8-import-conventions (ICN)
  "LOG",    # flake8-logging (LOG)
  "G",      # flake8-logging-format (G)
  "INP",    # flake8-no-pep420 (INP)
  "PIE",    # flake8-pie (PIE)
  "T20",    # flake8-print (T20)
  "PYI",    # flake8-pyi (PYI)
  "PT",     # flake8-pytest-style (PT)
  "Q",      # flake8-quotes (Q)
  "RSE",    # flake8-raise (RSE)
  # "RET",    # flake8-return (RET)
  "SLF",    # flake8-self (SLF)
  "SLOT",   # flake8-slots (SLOT)
  "TID",    # flake8-tidy-imports (TID)
  "TCH",    # flake8-type-checking (TCH)
  "INT",    # flake8-gettext (INT)
  "PTH",    # flake8-use-pathlib (PTH)
  "TD",     # flake8-todos (TD)
  "FIX",    # flake8-fixme (FIX)
  "ERA",    # eradicate (ERA)
  "PGH",    # pygrep-hooks (PGH)
  "TRY",    # tryceratops (TRY)
  "FAST",   # FastAPI (FAST)
  "AIR",    # Airflow (AIR)
  "DOC",    # pydoclint (DOC)
]
ignore = [
  "C901",     # complex-structure
  "UP007",    # non-pep604-annotation
  "UP030",    # format-literals
  "UP045",    # non-pep604-annotation-optional
  "B008",     # function-call-in-default-argument
  "A002",     # builtin-argument-shadowing
  "A004",     # builtin-import-shadowing
  "A005",     # builtin-module-shadowing
  "COM812",   # missing-trailing-comma
  "ISC001",   # single-line-implicit-string-concatenation
  "PIE790",   # unnecessary-placeholder
  "TRY003",   # raise-vanilla-args
  "FBT001",   # boolean-type-hint-positional-argument
  "FBT002",   # boolean-default-value-positional-argument
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
  "ANN001",   # Missing type annotation for function argument
  "ANN201",   # Missing return type annotation for public function
  "ANN202",   # Missing return type annotation for private function
  "ARG002",   # Unused method argument
  "D104",     # Missing docstring in public package
  "DOC201",   # Missing return documentation
  "DOC501",   # Raised exception missing from docstring
  "EM101",    # Exception must not use string literal
  "INP001",   # Implicit namespace package
  "NPY002",   # Legacy numpy random usage
  "PD901",    # Generic DataFrame variable name
  "PLC0415",  # Import outside top-level
  "PLC2701",  # Private name import
  "PLR0904",  # Too many public methods
  "PLR2004",  # Magic value used in comparison
  "PLR6201",  # Use a set literal when testing for membership
  "PLR6301",  # Method could be function/static/classmethod
  "PT011",    # pytest.raises() too broad
  "S101",     # Use of assert (acceptable in tests)
  "S106",     # Possible hardcoded password
  "SLF001",   # Private member accessed
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
exclude = ["build", ".venv"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = [
  "--cov=pdmt5",
  "--cov-branch",
  "--doctest-modules",
  "--capture=no",
]
pythonpaths = ["."]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
minversion = "6.0"

[tool.coverage.run]
source = ["pdmt5"]
omit = [
  "**/__init__.py",
  "test/**",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = ["if TYPE_CHECKING:"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
